--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,3 +1,5 @@
 <%= link_to "Legion of Doom Roster", villains_path %> |
-<%= link_to "Sign up for the Legion of Doom Today!!!", new_villain_path %>
+<%= link_to "Sign up for the Legion of Doom Today!!!", new_villain_path %>|
+<%= link_to "See Our Database of Enemies", heros_path %> |
+<%= link_to "Add an Enemy", new_hero_path %>
 <br>
